# flexomata

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
examples/GameOfLife/: CMakeLists.txt  life.cpp  main.cpp
examples/HighLife/: CMakeLists.txt  config.txt  highlife.cpp
examples/Rule30/: CMakeLists.txt  main.cpp  rule30.cpp
include/: configloader.h  deferred_configloader.h  enforcer.h  flexomata.h  grid.h  types.h
src/: CMakeLists.txt  configloader.cpp  configloader.h  deferred_configloader.cpp  enforcer.cpp  flexomatainterface.cpp  flexomatainterface.h  grid.cpp  main.cpp
src/ConfigLoader/: configloader.cpp  configloader.h
src/Enforcer/: enforcer.cpp  enforcer.h
src/Grid/: grid.cpp  grid.h
src/grid/: coordsystem.h  grid.cpp  grid.h  statemanager.cpp  statemanager.h
src/sim/: simcore.h
src/simulation/: simulation_core.cpp  simulation_core.h
src/universe/: README.md  simcore.cpp  simcore.h
